Fix cropping UI tools

--- a/inc/cropper/src/cropper.scss
+++ b/inc/cropper/src/cropper.scss
@@ -86,7 +86,7 @@
 			img {
 				display: block;
 				width: auto;
-				height: 80px;
+				height: auto;
 				max-width: 100%;
 				max-height: 80px;
 			}
@@ -127,6 +127,8 @@
 
 			&-crop {
 				position: relative;
+				padding: 0;
+				margin: 10px 0 0;
 			}
 
 			&--preview {
